Add Identity with custom user model

--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LocalDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WatchShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "SomeecomDB": "workstation id=WatchShop.mssql.somee.com;packet size=4096;user id=_21225807_SQLLogin_1;pwd=lhvn4nkv6r;data source=WatchShop.mssql.somee.com;persist security info=False;initial catalog=WatchShop"
+    "SomeecomDB": "workstation id=WatchShop.mssql.somee.com;packet size=4096;user id=_21225807_SQLLogin_1;pwd=lhvn4nkv6r;data source=WatchShop.mssql.somee.com;persist security info=False;initial catalog=WatchShop",
+    "WatchShopDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Project;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
